--- a/MIST143_Traveler/Views/Shared/Components/Productlistpagi2/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Productlistpagi2/Default.cshtml
@@ -5,20 +5,13 @@
     ViewData["Title"] = "Default";
 }
 @{
-    <p>所有可預訂的...<input type="button" id="datapicker" /></p>
+    <label for="start">選擇遊玩日期:</label>
 
-    <link rel="stylesheet" href="//apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
-    <script src="//apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="//apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="jqueryui/style.css">
+    <input type="date" id="start" name="trip-start"
+           value="" class="ipwidth" min="">
+}
+@section Scripts{
     <script>
-        $(function () {
-            $("#datepicker").datepicker();
-        });
+
     </script>
-
-
-
-
-
 }
