--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-wallet2" type="button">優惠券</a></li>
                             <li><a href="@Url.ActionLink("Review","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-chat-left-text" type="button">我的評論</a></li>
                             <li><a href="@Url.ActionLink("Star","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-star" type="button">STAR積分</a></li>
-                            <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-star" type="button">登出</a></li>
+                            <li><a href="@Url.ActionLink("Logout","CustomerCenter")" class="dropdown-item bi bi-star" type="button">登出</a></li>
                         </ul>
 
 
