--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -26,7 +26,7 @@
                     <div class="col-12 col-md-3">
                   
                         <div class="card" style="width: 18rem;">
-                            <label class="btn" for="file">
+                            <label class="btn">
                                 <input type="file" name="photo" class="form-control" onchange="uploadImg()" id="file"style="display:none" accept="image/*">
                                 <img src="~/Images/客戶大頭貼/@Model.PhotoPath" id="avatarShow" style="width:240px;height:240px;border-radius:50%" />
                             </label>
@@ -124,6 +124,7 @@
 
 @section Scripts{
     <script>
+
         const cont = document.querySelector("#cont")
         const Btnsave = document.querySelector("#send")
         //==============測試AJAX圖片上傳================
@@ -134,7 +135,7 @@
 
             var formData = new FormData();
             formData.append("files", $("#file")[0].files[0]);
-            
+
             $.ajax({
                 url: "/CustomerCenter/FileUpLoad",
                 type: "Post",
@@ -279,7 +280,7 @@
 
 
     $('#btnlove').click(function () {
-        $('#cont').load('@Url.Action("CommentList", "CustomerCenter",new {v.MembersId})')
+        $('#cont').load('@Url.Action("LMyFavorites", "CustomerCenter",new {v.MembersId})')
         $(this).addClass("btn btn-outline-warning 按鈕顏色2 active")
         $('#btnorder').removeClass("active")
         $('#btnreview').removeClass("active")
