--- a/MIST143_Traveler/Views/CustomerCenter/ProductManage.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/ProductManage.cshtml
@@ -58,7 +58,7 @@
 
 
                         <!-- Example single danger button -->
-                        <div class="btn-group">
+                        @*<div class="btn-group">
                             <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 訂單管理
                             </button>
@@ -69,7 +69,7 @@
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Separated link</a></li>
                             </ul>
-                        </div>
+                        </div>*@
 
 
                         <div>
