--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -48,23 +48,23 @@
                 <div class="card-body">
 
                     @*<form name="userInfo" method="post" enctype="application/x-www-form-urlencoded" action="~/CustomerCenter/newLogh">*@
-                    <div class="input-group form-group">
+                    <div class="input-group form-group mb-3">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
                         <input type="text" class="form-control" placeholder="Email帳號" id="Actemail" name="Email">
 
                     </div>
-                    <div class="input-group form-group">
+                    <div class="input-group form-group mb-2">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
                         <input type="password" class="form-control" placeholder="password" id="Pas" name="Password">
                     </div>
-                    <div class="row align-items-center remember">
+                    <div class="row align-items-center remember mb-4">
                         <input type="checkbox">記住我
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mt-2">
                         <input type="submit" value="Login" onclick="BtnLogin()" id="btnlog" class="btn float-right login_btn">
                     </div>
                     @*</form>*@
@@ -75,7 +75,7 @@
                         Don't have an account?<a href="#">Sign Up</a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="#">Forgot your password?</a>
+                        <a href="@Url.ActionLink("Forgetpas","CustomerCenter")">Forgot your password?</a>
                     </div>
                     <button type="button" class="btn btn-success" id=" demo" onclick="DemoValue()">Demo</button>
                 </div>
