--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -1,11 +1,14 @@
 ﻿@model MIST143_Traveler.MViewModel.CProductViewModel
+@using Microsoft.AspNetCore.Http
+@using System.Text.Json;
+@inject IHttpContextAccessor Accessor
 
 
 
 
 @{
     ViewData["Title"] = "List";
-   
+
 }
 
 @section Styles{
@@ -16,6 +19,9 @@
     <link href="~/css/product.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/travelOrder.css" />
 }
+
+
+
 <body class="p-0 m-0 border-0 bd-example">
     <div class="p-0 m-0 border-0 mx-auto 最大的">
         <div class="activity-page-container">
@@ -65,16 +71,27 @@
         <div class="小介紹">
             <div class="評價">
                 <img src="~/Images/Product/一顆星.png" /><span>5.0</span>(3則評價) 3人參加過
+                @{
+                    if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
+                    {
+                        var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+                        var v = JsonSerializer.Deserialize<Member>(OBJ);
+                        <div class="我的最愛">
+                            @*<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+                            </svg>*@
+                            <div>
+                                <input type="hidden" id="PID" name="TravelProductId" value="@Model.產品列表.FirstOrDefault().TravelProductId" />
+                                <input type="hidden" id="MID" name="MembersId" value="@v.MembersId" />
+                                <label class="btn">
+                                    <i class="bi bi-heart" onclick=toMyFavorites()>加入我的最愛</i>
+                                </label>
+                                @*@Html.ActionLink("加入我的最愛", null, null, null, null)*@
+                            </div>
+                        </div>
+                    }
 
-                <div class="我的最愛">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
-                    </svg>
-                    <div>
-                        @Html.ActionLink("加入我的最愛", null, null, null, null)
-                    </div>
-                </div>
-
+                }
             </div>
         </div>
         <br />
@@ -123,8 +140,8 @@
                                                         class="btn btn-outline-secondary">
                                                     -
                                                 </button>
-                                                <div class="number">
-                                                    <input type="number" class="productNumber" id="productNum" name="Count" value="1" />
+                                                <div class="number" id="adultNum">
+                                                    <input type="number" class="productNumber" name="Count" value="0" />
                                                 </div>
                                                 <button type="button" id="productPlus"
                                                         class="btn btn-outline-secondary">
@@ -133,17 +150,16 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <form method="post" action="PayData">
-                                        <div class="px-3 totalRow">
-                                            <div class="my-3">
-                                                <div class="titleFontStyle">NT$ <span id="totalPrice">0</span></div>
-                                                <div class="subInfoText">完成所有必填選項</div>
-                                                <div class="subInfoText">剩餘:  @Model.產品列表.FirstOrDefault().Stocks 個位置</div>
-                                            </div>
-                                            <div class="rightBtns">
-                                                @*<button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal" id="addShopping">
-                        <a class="buttonInnderA" >加入購物車</a>
-                    </button>*@
+                                    <div class="px-3 totalRow">
+                                        <div class="my-3">
+                                            <div class="titleFontStyle">NT$ <span id="totalPrice">0</span></div>
+                                            <div class="subInfoText">完成所有必填選項</div>
+                                            <div class="subInfoText">剩餘:  @Model.產品列表.FirstOrDefault().Stocks 個位置</div>
+                                        </div>
+                                        <div class="rightBtns">
+                                            <button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">
+                                                <a class="buttonInnderA">加入購物車</a>
+                                            </button>
 
                                                 <input type="hidden" name="TravelProductId" value="@Model.產品列表.FirstOrDefault().TravelProductId" />
                                                 <input type="submit" value="  立即預定  " class="btn btn-main ms-3" />
@@ -284,61 +300,58 @@
         </div>
     </div>
     @section Scripts{
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.1.js"
                 integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
         <script src="~/js/travelOrder.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
-            window.onload = function () {
-                //頁面載入時初始總價
-                $('#totalPrice').text( @Model.產品列表.FirstOrDefault().Price)
-                //調整描述 換行 加圓點
-                let descritpionContent = $('#prodctDescriptionHidden').text()
-                descritpionContent = descritpionContent.replace(/#/g,"<br> ● ")
-                $('#prodctDescription').html(descritpionContent)
+                $('#adultPlus').click(function () {
+                    let currentNum = parseInt($('#adultNum').text())
+                    currentNum += 1
+                    $('#adultNum').text(currentNum)
+
+                    $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+                });
+                $('#adultMinus').click(function () {
+                    let currentNum = parseInt($('#adultNum').text())
+                    if (currentNum > 0) {
+                        currentNum -= 1
+                        $('#adultNum').text(currentNum)
+                    }
+                    $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+                    console.log($('#adultNum').text())
+                });
+            //=============================存入我的最愛================================
+
+            const toMyFavorites = () =>
+            {
+
+                var Tofa = {
+                    TravelProductId:$("#PID").val(),
+                    MembersId:$("#MID").val(),
+                }
+                console.log(Tofa)
+                $.ajax({
+                    url: '@Url.Action("toMyFavorites", "CustomerCenter")',
+                    method: 'Post',
+                    dataType: 'Json',
+                    data: { PMID: Tofa },
+                    success: function (datas) {
+                        if (!datas.res) {
+                            Swal.fire('已經在我的最愛囉!')
+                            return;
+                        }
+                        Swal.fire(
+                            'Good job!',
+                            '加入我的最愛囉!',
+                            'success'
+                        )
+                    }
+                })
             }
-            //點擊加號
-            $('#productPlus').click(function () {
-                let currentNum = parseInt($('#productNum').val())
-                currentNum += 1
-                $('#productNum').val(currentNum)
 
-                $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
-            });
-            //點擊減號
-            $('#productMinus').click(function () {
-                let currentNum = parseInt($('#productNum').val())
-                if (currentNum > 1) {
-                    currentNum -= 1
-                    $('#productNum').val(currentNum)
-                }
-                $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
-                console.log($('#adultNum').text())
-            });
-            //改變數量
-            $('#productNum').change(function () {
-                $("#postProductNum").val($('#productNum').val())
-            })
-            @*$('#addShopping').click(function () {
-                console.log("addShopping")
-
-                let productNum = $('#productNum').val()
-                let productName = $('#productName').text()
-                let productImgUrl = $('.carouselImg')[0].getAttribute("src")
-                let imgIndex = productImgUrl.lastIndexOf("/")
-                let imgUrl = productImgUrl.substring(imgIndex, productImgUrl.length)
-                let productInfo = {
-                    TravelProductId:  @Model.產品列表.FirstOrDefault().TravelProductId,
-                    TravelProductName: productName,
-                    Count: productNum,
-                    /*productPic: imgUrl,*/
-                    Price:  @Model.產品列表.FirstOrDefault().Price
-                }
-
-                console.log("productInfo", productInfo)
-                sessionStorage.removeItem("SK_PURCHASED_PRODUCT");
-                sessionStorage.setItem("SK_PURCHASED_PRODUCT", JSON.stringify(productInfo));
-            })*@
         </script>
     }
 </body>
