--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -151,7 +151,7 @@
                                 <div class="left">點擊「確認付款方式」即表示確認訂單與右方總金額無誤，且同意<a>平台服務條款</a>、<a>退改政策</a></div>
                                 <div class="right">
                                     <div class="mainTitle">NT$ @TotalPrice.ToString("###,###,##0")</div>
-                                    <input type="submit" class="btn btn-main" value="確認付款" id="clickPayBtn" @*data-bs-toggle="modal" data-bs-target="#joinModal"*@ />
+                                    <input type="submit" class="btn btn-main" value="確認付款" id="clickPayBtn"data-bs-toggle="modal" data-bs-target="#joinModal" />
                                     @*<button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">確認付款</button>*@
                                 </div>
                             </div>
