--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -24,38 +24,38 @@
 
 <body class="p-0 m-0 border-0 bd-example">
     <div class="p-0 m-0 border-0 mx-auto 最大的">
-        <div class="activity-page-container">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="幻燈片 1" src=" https://picsum.photos/400/300"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="幻燈片 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="幻燈片 3"></button>
+        <div class="col-10">
+            <div class="activity-page-container">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="幻燈片 1" src=" https://picsum.photos/400/300"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="幻燈片 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="幻燈片 3"></button>
+                    </div>
+
+                    <div class="carousel-inner 照片的包皮">
+                        @foreach (var item in Model.產品列表.FirstOrDefault().Runproductpictures)
+                        {
+                            <div class="carousel-item active">
+                                <img src="https://localhost:44338/images/TravelProductPictures/@item.TravelPicture1" class="d-block carouselImg" alt="...">
+                            </div>
+
+                        }
+
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">以前的</font></font></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">下一個</font></font></span>
+                    </button>
                 </div>
-                <div class="carousel-inner 照片的包皮">
-                    <div class="carousel-item active">
-                        <img src="https://localhost:44338/images/TravelProductPictures/@Model.產品列表.FirstOrDefault().productpictures.FirstOrDefault().TravelPicture1" class="d-block carouselImg" " alt="...">
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="https://localhost:44338/images/TravelProductPictures/@Model.產品列表.FirstOrDefault().productpictures.FirstOrDefault().TravelPicture1" class="d-block carouselImg" " alt="...">
-                    </div>
-
-                    <div class="carousel-item">
-                        <img src="https://localhost:44338/images/TravelProductPictures/@Model.產品列表.FirstOrDefault().productpictures.FirstOrDefault().TravelPicture1" class="d-block carouselImg" " alt="...">
-                    </div>
-
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">以前的</font></font></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">下一個</font></font></span>
-                </button>
             </div>
-
         </div>
+        
         <div class="分類">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
@@ -129,37 +129,39 @@
                                             @Model.產品列表.FirstOrDefault().TravelProductName
                                         </div>
                                     </div>
-                                    <div class="subInfoText ps-3">數量</div>
-                                    <div class="py-3">
-                                        <div class="chooseNumberRow mx-3">
-                                            <div class="chooseTitle">
-                                                每人
-                                            </div>
-                                            <div class="chooseNumberBlock">
-                                                <button type="button" id="productMinus"
-                                                        class="btn btn-outline-secondary">
-                                                    -
-                                                </button>
-                                                <div class="number" id="adultNum">
-                                                    <input type="number" class="productNumber" name="Count" value="0" />
+                                    <form method="post" action="PayData">
+                                        <div class="subInfoText ps-3">數量</div>
+                                        <div class="py-3">
+                                            <div class="chooseNumberRow mx-3">
+                                                <div class="chooseTitle">
+                                                    每人
                                                 </div>
-                                                <button type="button" id="productPlus"
-                                                        class="btn btn-outline-secondary">
-                                                    +
-                                                </button>
+                                                <div class="chooseNumberBlock">
+                                                    <button type="button" id="productMinus"
+                                                            class="btn btn-outline-secondary">
+                                                        -
+                                                    </button>
+                                                    <div class="number">
+                                                        <input type="number" class="productNumber" id="productNum" name="Count" value="1" />
+                                                    </div>
+                                                    <button type="button" id="productPlus"
+                                                            class="btn btn-outline-secondary">
+                                                        +
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="px-3 totalRow">
-                                        <div class="my-3">
-                                            <div class="titleFontStyle">NT$ <span id="totalPrice">0</span></div>
-                                            <div class="subInfoText">完成所有必填選項</div>
-                                            <div class="subInfoText">剩餘:  @Model.產品列表.FirstOrDefault().Stocks 個位置</div>
-                                        </div>
-                                        <div class="rightBtns">
-                                            <button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">
-                                                <a class="buttonInnderA">加入購物車</a>
-                                            </button>
+
+                                        <div class="px-3 totalRow">
+                                            <div class="my-3">
+                                                <div class="titleFontStyle">NT$ <span id="totalPrice">0</span></div>
+                                                <div class="subInfoText">完成所有必填選項</div>
+                                                <div class="subInfoText">剩餘:  @Model.產品列表.FirstOrDefault().Stocks 個位置</div>
+                                            </div>
+                                            <div class="rightBtns">
+                                                @*<button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal" id="addShopping">
+                        <a class="buttonInnderA" >加入購物車</a>
+                    </button>*@
 
                                                 <input type="hidden" name="TravelProductId" value="@Model.產品列表.FirstOrDefault().TravelProductId" />
                                                 <input type="submit" value="  立即預定  " class="btn btn-main ms-3" />
@@ -168,15 +170,17 @@
                                     </form>
                                     <form method="post" action="AddToSession" class="addshoppingCart">
                                         <input type="hidden" name="TravelProductId" value="@Model.產品列表.FirstOrDefault().TravelProductId" />
-                                        <input type="hidden" name="Count" value="1" id="postProductNum"/>
-                                        <input type="submit" value="加入購物車" class="btn btn-main mx-3" />
+                                        <input type="hidden" name="Count" value="1" id="postProductNum" />
+                                        <input type="submit" value="加入購物車"  data-bs-toggle="modal" data-bs-target="#joinModal" class="btn btn-main mx-3" />
                                     </form>
 
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="leftSide grey p-3">
-                                    <div class="titleFontStyle">已選方案詳情</div>
+                                    <div class="titleFontStyle">行程明細</div>
+                                    <div class="hiddenInfoNote hiddenEle" >@Model.產品列表.FirstOrDefault().DailyDetailText</div>
+                                    <div id="productInfoNote"></div>
                                 </div>
                             </div>
                         </div>
@@ -206,12 +210,6 @@
             </div>
             <div class="小介紹">
                 @Model.產品列表.FirstOrDefault().PreparationDescription
-            </div>
-            <div class="活動DIV">
-                <h2><span class="一條根"> </span><span>行程明細</span></h2>
-            </div>
-            <div class="小介紹">
-                @Model.產品列表.FirstOrDefault().DailyDetailText
             </div>
             <div class="活動DIV">
                 <h2><span class="一條根"> </span><span>活動評價</span></h2>
@@ -307,22 +305,43 @@
         <script src="~/js/travelOrder.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
-                $('#adultPlus').click(function () {
-                    let currentNum = parseInt($('#adultNum').text())
-                    currentNum += 1
-                    $('#adultNum').text(currentNum)
+            window.onload = function () {
+                //頁面載入時初始總價
+                $('#totalPrice').text( @Model.產品列表.FirstOrDefault().Price)
+                //調整描述 換行 加圓點
+                let descritpionContent = $('#prodctDescriptionHidden').text()
+                descritpionContent = descritpionContent.replace(/#/g,"<br> ● ")
+                $('#prodctDescription').html(descritpionContent)
+                //
+                let descritpionLabel = $(".hiddenInfoNote").text()
+                descritpionLabel = descritpionLabel.replace(/#/g, "<br>")
+                $('#productInfoNote').html(descritpionLabel)
+            }
+            //點擊加號
+            $('#productPlus').click(function () {
+                let currentNum = parseInt($('#productNum').val())
+                currentNum += 1
+                $('#productNum').val(currentNum)
+                $("#postProductNum").val($('#productNum').val())
+                $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+            });
+            //點擊減號
+            $('#productMinus').click(function () {
+                let currentNum = parseInt($('#productNum').val())
+                if (currentNum > 1) {
+                    currentNum -= 1
+                    $('#productNum').val(currentNum)
+                }
+                $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+                $("#postProductNum").val($('#productNum').val())
+            });
+            //改變數量
+            $('#productNum').change(function () {
+                let currentNum = $('#productNum').val()
+                $("#postProductNum").val(currentNum)
+                $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+            })
 
-                    $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
-                });
-                $('#adultMinus').click(function () {
-                    let currentNum = parseInt($('#adultNum').text())
-                    if (currentNum > 0) {
-                        currentNum -= 1
-                        $('#adultNum').text(currentNum)
-                    }
-                    $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
-                    console.log($('#adultNum').text())
-                });
             //=============================存入我的最愛================================
 
             const toMyFavorites = () =>
