--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -299,9 +299,7 @@
     </div>
     @section Scripts{
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.1.js"
-                integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+      
         <script src="~/js/travelOrder.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
@@ -346,6 +344,14 @@
 
             const toMyFavorites = () =>
             {
+                //function love(i) {
+                //    var c = $("#heart" + i).attr('class')
+                //    if (c == 'bi bi-heart') {
+                //        $("#heart" + i).toggleClass("bi bi-heart-fill")
+                //    }
+                //    else
+                //        $("#heart" + i).toggleClass("bi bi-heart")
+                //}
 
                 var Tofa = {
                     TravelProductId:$("#PID").val(),
